Tue Jul  5 11:07:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/odbc/sql2tds.h:
	* src/odbc/unittests/array.c:
	- full support for paramset
	- cleanup done handling
	- remove c++ style comments
	- update paramset test (now working)

Tue Jul  5  9:51:30 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am: clean more

Tue Jul  5  9:20:10 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- tds_multiple_execute implementation

Mon Jul  4 11:21:24 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/bcp.c src/dblib/dblib.c:
	- applied Bill Thompson patch for dblib bcp

Mon Jul  4 11:15:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/replacements.h src/apps/bsqldb.c src/apps/defncopy.c:
	* src/dblib/unittests/common.c src/replacements/basename.c(added):
	- is basename not found use replacement

Fri Jul  1 12:04:43 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c include/tds.h:
	- implement partial multiple queries

Thu Jun 30 14:13:47 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/data.c src/tds/iconv.c src/tds/mem.c src/tds/query.c:
	* src/tds/read.c src/tds/token.c src/tds/write.c:
	- doc updates

Thu Jun 30 12:58:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/checkexport.sh src/odbc/odbc.c:
	- add SQLParamOptions to implemented ODBC functions

Thu Jun 30 11:46:20 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/apps/tsql.c src/ctlib/ctutil.c:
	* src/dblib/dbutil.c src/odbc/odbc.c src/tds/mem.c src/tds/token.c:
	- rename some TDSMESSAGE fields as James suggested

Wed Jun 29 09:18:06 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/bsqldb.c src/apps/freebcp.c src/ctlib/cs.c:
	* src/ctlib/ct.c src/ctlib/unittests/t0002.c:
	* src/ctlib/unittests/t0006.c src/dblib/bcp.c: