@@ -1,3 +1,9 @@
+Wed Jul  6 12:14:54 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/odbc.c src/odbc/unittests/array.c:
+	- optimize way paramset result are handled
+	- avoid param result overwriting
+	- use malloc in array test to detect possible overflows
+
 Tue Jul  5 11:07:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
 	* src/odbc/prepare_query.c src/odbc/sql2tds.c src/odbc/sql2tds.h:
